text wrapping issue on chrome fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -115,6 +115,10 @@ main {
     color: rgba(0,0,0,.75);
     font-weight: lighter;   
 }
+
+.description {
+    word-wrap: break-word;
+}
 /* /main */
 
 /* post */
